--- a/homework3/css/style.css
+++ b/homework3/css/style.css
@@ -6,9 +6,17 @@ body{
   background-size: cover ;
   background-position: center;
   background-image: url("../images/pigeonbackground.jpg");
+  background-color:  #DDDDDD;
   width: auto;
   height: auto;
   background-repeat: no-repeat;
+}
+
+*:focus{ 
+  color: #417243;
+  border-style: dashed;
+  border-width: 3px;
+
 }
 
 main{
@@ -29,7 +37,7 @@ caption{
 
 p{
   padding-top: 15px;
-  color: black;
+  color: #000000;
 }
 
 a{
@@ -40,47 +48,22 @@ a{
 }
 
 table{
-    border-top: 2px solid #000000;
-    border-left: 2px solid #000000;
-    border-right: 2px solid #000000;
-    text-align:center;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius:10px;
+    border: 2px solid #000000;
+    margin: 0 auto;
+    border-radius: 10px;
+    border-collapse: separate; 
 }
 
 .colhead{
   background-color: #7e0830;
   color: #FFFFFF;
   min-width: 125px;
-  padding-top: 10px;
-  padding-bottom:10px;
-  padding-left:10px;
-  padding-right:10px;
-  text-align:center;
   text-transform: uppercase;
+  padding: 10px;
 }
 
 .rowhead{
   border-bottom: 2px solid #000000;
-}
-
-.colhead:first-of-type{
-  border-top-left-radius: 10px;
-}
-
-.colhead:last-of-type{
-  border-top-right-radius: 10px;
-}
-
-tr:last-of-type:last-child >
-th.rowhead{
-  border-bottom-left-radius: 10px;
-}
-
-tr:last-of-type:last-child >
-td:last-of-type{
-  border-bottom-right-radius: 10px;
 }
 
 td{
@@ -94,7 +77,7 @@ tr{
 }
 
 tr:nth-child(even) {
-  background: transparent;
+  background: transparent; 
 }
 
 tr:nth-child(odd) {
@@ -105,13 +88,30 @@ tr:hover {
   background: rgba(126, 8, 48, 0.25);
 }
 
-thead tr:first-child th:first-child{}
+/* border radius issues */
+thead tr:first-child th:first-child{
+  border-top-left-radius: 10px;
+}
+
+thead tr:last-child th:last-child{
+  border-top-right-radius: 10px;
+}
+
+tbody tr:last-child th:first-child{
+  border-bottom-left-radius: 10px;
+}
+
+tbody tr:last-child td:last-child{
+  border-bottom-right-radius: 10px;
+}
 
 footer{
   background:#000000;
-  text-align:center;
-  color: #FFFFFF;
   min-height: 75px;
   position: relative;
 }
 
+footer p{
+  text-align:center;
+  color: #FFFFFF;
+}
