--- a/homework3/css/style.css
+++ b/homework3/css/style.css
@@ -1,116 +1,114 @@
 body{
-  color: #000000;
-  font-size: 16px;
-  margin: 1.2em;
-  font-family: 'Andika', sans-serif;
-  background-size: cover ;
-  background-position: center;
-  background-image: url("../images/pigeonbackground.jpg");
-  background-color:  #DDDDDD;
-  width: auto;
-  height: auto;
-  background-repeat: no-repeat;
-}
-
+    color: #000000;
+    font-size: 16px;
+    margin: 1.2em;
+    font-family: 'Andika', sans-serif;
+    background-size: cover ;
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-image: url("../images/pigeonbackground.jpg");
+  }
+  
 *:focus{ 
-  color: #417243;
-  border-style: dashed;
-  border-width: 3px;
-
+    color: #417243;
+    border-style: dashed 3px;
 }
 
 main{
-  margin-bottom: 100px;
+    margin-bottom: 100px;
 }
-
+  
 h1{
-  color: #c12258;
-  font-size: 2em;
-  line-height: 2;
-  text-align:center;
+    color: #B21F50;
+    font-size: 2em;
+    line-height: 2;
+    text-align:center;
 }
 
 caption{
-  margin:5px 0px;
-  text-align:center;
+    margin:5px 0px;
 }
-
+  
 p{
-  padding-top: 15px;
-  color: #000000;
+    padding-top: 15px;
 }
-
+  
 a{
-  color: #C12258;
-  text-align:center;
-  text-decoration-style: wavy;
-  font-size: 16px;
+    color: #C12258;
+    text-decoration-style: wavy;
+    font-size: 16px;
 }
-
+  
 table{
     border: 2px solid #000000;
     margin: 0 auto;
-    border-radius: 10px;
     border-collapse: separate; 
+    border-radius: 10px;
 }
-
+  
 .colhead{
-  background-color: #7e0830;
-  color: #FFFFFF;
-  min-width: 125px;
-  text-transform: uppercase;
-  padding: 10px;
+    background-color: #7e0830;
+    color: #FFFFFF;
+    min-width: 125px;
+    padding: 10px 0;
+    text-transform: uppercase;
 }
-
+  
 .rowhead{
-  border-bottom: 2px solid #000000;
+    border-right: 2px solid #000000;
+    border-top: 2px solid #000000;
+    padding: 10px 0;
 }
 
 td{
-  padding: 15px;
-  text-align:center;
-  border-bottom: 2px solid #000000;
+    padding: 10px;
+    text-align:center;
+    border-top: 2px solid #000000;
 }
-
+  
 tr{
-  background-color: #D1D1D1
+    padding: 10px;
+    text-align:center;
+    border-top: 2px solid #000000;
 }
 
 tr:nth-child(even) {
-  background: transparent; 
+    background-color: transparent; 
 }
-
+  
 tr:nth-child(odd) {
-  background:  #D1D1D1
+    background-color:  #D1D1D1
 }
-
+  
 tr:hover {
-  background: rgba(126, 8, 48, 0.25);
+    background-color: rgba(126, 8, 32, 0.25);
 }
-
+  
 thead tr:first-child th:first-child{
-  border-top-left-radius: 10px;
-}
-
-thead tr:last-child th:last-child{
-  border-top-right-radius: 10px;
-}
-
-tbody tr:last-child th:first-child{
-  border-bottom-left-radius: 10px;
-}
-
-tbody tr:last-child td:last-child{
-  border-bottom-right-radius: 10px;
-}
-
+    border-top-left-radius: 10px;
+  }
+  
+  thead tr:last-child th:last-child{
+    border-top-right-radius: 10px;
+  }
+  
+  tbody tr:last-child th:first-child{
+    border-bottom-left-radius: 10px;
+  }
+  
+  tbody tr:last-child td:last-child{
+    border-bottom-right-radius: 10px;
+  }
+  
+  
 footer{
-  background:#000000;
-  min-height: 75px;
-  position: relative;
+    width:100%;
+    background:#000000;
+    text-align:center;
+    color: #FFFFFF;
+    min-height: 75px;
+    position: fixed;
+    width: 100%;
+    margin-left:-1.2em
 }
-
-footer p{
-  text-align:center;
-  color: #FFFFFF;
-}
+  
