--- a/homework3/css/style.css
+++ b/homework3/css/style.css
@@ -7,6 +7,7 @@ body{
     background-position: center;
     background-repeat: no-repeat; 
     background-image: url("../images/pigeonbackground.jpg");
+    background-color: #DDDDDD;
   }
   
 *:focus{ 
@@ -34,7 +35,7 @@ p{
 }
   
 a{
-    color: #B92751;
+    color: #B21F50;
     text-decoration-style: wavy;
     font-size: 16px;
 }
@@ -50,7 +51,8 @@ table{
     background-color: #7e0830;
     color: #FFFFFF;
     min-width: 125px;
-    padding: 10px 0;
+    padding: 10px;
+    vertical-align: middle;
     text-transform: uppercase;
 }
   
@@ -72,11 +74,11 @@ tr{
     border-top: 2px solid #000000;
 }
 
-tr:nth-child(even) {
+tbody tr:nth-child(even) {
     background-color: transparent; 
 }
   
-tr:nth-child(odd) {
+tbody tr:nth-child(odd) {
     background-color:  #D1D1D1
 }
   
@@ -88,17 +90,17 @@ thead tr:first-child th:first-child{
     border-top-left-radius: 10px;
   }
   
-  thead tr:last-child th:last-child{
+thead tr:last-child th:last-child{
     border-top-right-radius: 10px;
   }
   
-  tbody tr:last-child th:first-child{
+tbody tr:last-child th:first-child{
     border-bottom-left-radius: 10px;
   }
   
-  tbody tr:last-child td:last-child{
+tbody tr:last-child td:last-child{
     border-bottom-right-radius: 10px;
-  }
+}
   
   
 footer{
