--- a/homework3/css/style.css
+++ b/homework3/css/style.css
@@ -82,7 +82,7 @@ tbody tr:nth-child(odd) {
     background-color:  #D1D1D1
 }
   
-tr:hover {
+tbody tr:hover {
     background-color: rgba(126, 8, 32, 0.25);
 }
   
