--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -78,10 +78,8 @@ footer{
 
 .container{
   display: grid;
-  -webkit-grid-template-columns: 1fr, 5fr, 1fr;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: 1fr, 5fr, 1fr;
-  grid-template-columns: 1fr, 5fr, 1fr;
-  grid-auto-rows: auto;
   grid-row-gap: 15px;
   overflow: hidden
   /*Your Code Here*/
@@ -111,7 +109,7 @@ header p{
 }
 
 .about-image{
-  grid-row: 2 / 4 ;
+  grid-row: 2 / 3 ;
   grid-column: 1 / -1;
   overflow: hidden;
   max-height:700px;
@@ -120,14 +118,14 @@ header p{
 }
 
 .about{
-  grid-row: 2 / 4 ;
-  grid-column: 2 / span 3;
+  grid-row: 2 / 3 ;
+  grid-column: 2 / 4;
   /*Your Code Here*/
 
 }
 
 .method-image{
-  grid-row: 3 / 5 ;
+  grid-row: 3 / 4 ;
   grid-column: 1 / -1;
   overflow: hidden;
   max-height:700px;
@@ -136,19 +134,19 @@ header p{
 }
 
 .method{
-  grid-row: 3 / 5 ;
-  grid-column: 2 / span 3;
+  grid-row: 3 / 4 ;
+  grid-column: 2 / 4;
   /*Your Code Here*/
 
 }
 
 .clients{
-  grid-row: 4 / 6 ;
-  grid-column: 2 / span 3;
+  grid-row: 4 / 5 ;
+  grid-column: 2 / 4;
 }
 
 .clients-image{
-  grid-row: 4 / 6 ;
+  grid-row: 4 / 5 ;
   grid-column: 1 / -1;
   overflow: hidden;
   max-height:700px;
@@ -156,13 +154,13 @@ header p{
 }
 
 .contact{
-  grid-row: 5 / 7 ;
-  grid-column: 2 / span 3;
+  grid-row: 5 / 6 ;
+  grid-column: 2 / 4;
   /*Your Code Here*/
 }
 
 .contact-image{
-  grid-row: 5 / 7 ;
+  grid-row: 5 / 6 ;
   grid-column: 1 / -1;
   overflow: hidden;
   max-height:700px;
@@ -175,6 +173,7 @@ header p{
   padding: 30px;
   vertical-align: middle;
   align-self:center;
+  justify-self:center;
 }
 
 
@@ -191,12 +190,14 @@ header p{
   }
 
   .about, .clients, .method-image, .contact-image{
-    grid-column: 3 / span 6;
+    grid-column-start: 3 ;
+    grid-column-end: 6;
     /*Your Code Here*/
   }
 
   .about-image, .clients-image, .method, .contact{
-    grid-column: 2 / span 5;
+    grid-column-start: 2 ;
+    grid-column-end: 5;
     /*Your Code Here*/
   }
 }
