--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -48,14 +48,15 @@ nav a:hover{
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
-
+  position: absolute;
+  margin-top: -40px;
   /*Your code here*/
 }
 
 /*Your Code Here*/
 /*Write selector/rule property to position the skip class element*/
 .skip a:focus{
-  top: 0;
+  margin-top: 0;
 }
 /*Your Code Here*/
 /*Write selector/rule property to style all elements when in focus*/
@@ -78,8 +79,8 @@ footer{
 
 .container{
   display: grid;
-  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: 1fr, 5fr, 1fr;
+  grid-template-rows: auto auto auto auto auto;
   grid-row-gap: 15px;
   overflow: hidden
   /*Your Code Here*/
@@ -108,63 +109,34 @@ header p{
   text-align: center;
 }
 
-.about-image{
-  grid-row: 2 / 3 ;
-  grid-column: 1 / -1;
-  overflow: hidden;
-  max-height:700px;
-  /*Your Code Here*/
+.about, .method, .clients, .contact{
+  grid-column: 2 / span 1;
 
 }
 
-.about{
-  grid-row: 2 / 3 ;
-  grid-column: 2 / 4;
-  /*Your Code Here*/
+.about-image, .method-image, .clients-image, .contact-image{
+   grid-column: 1 / -1;
+   max-height: 700px;
+   overflow: hidden;
+}
+
+.about, .about-image{
+  grid-row: 2 / span 1;
 
 }
 
-.method-image{
-  grid-row: 3 / 4 ;
-  grid-column: 1 / -1;
-  overflow: hidden;
-  max-height:700px;
-  /*Your Code Here*/
-
+.method, .method-image{
+  grid-row: 3 / span 1;
 }
 
-.method{
-  grid-row: 3 / 4 ;
-  grid-column: 2 / 4;
-  /*Your Code Here*/
 
+.clients, .clients-image{
+  grid-row: 4 / span 1;
 }
 
-.clients{
-  grid-row: 4 / 5 ;
-  grid-column: 2 / 4;
-}
 
-.clients-image{
-  grid-row: 4 / 5 ;
-  grid-column: 1 / -1;
-  overflow: hidden;
-  max-height:700px;
-  /*Your Code Here*/
-}
-
-.contact{
-  grid-row: 5 / 6 ;
-  grid-column: 2 / 4;
-  /*Your Code Here*/
-}
-
-.contact-image{
-  grid-row: 5 / 6 ;
-  grid-column: 1 / -1;
-  overflow: hidden;
-  max-height:700px;
-  /*Your Code Here*/
+.contact, .contact-image{
+  grid-row: 5 / span 1;
 }
 
 .text-block{
@@ -180,6 +152,8 @@ header p{
 @media all and (min-width: 800px){
   nav{
     padding: 30px 0px;
+    text-align: left;
+    background-color: #ddd;
     /*Your code here????????????:*/
   }
 
@@ -190,15 +164,11 @@ header p{
   }
 
   .about, .clients, .method-image, .contact-image{
-    grid-column-start: 3 ;
-    grid-column-end: 6;
-    /*Your Code Here*/
+    grid-column: 3 / span 2;
   }
-
-  .about-image, .clients-image, .method, .contact{
-    grid-column-start: 2 ;
-    grid-column-end: 5;
-    /*Your Code Here*/
+  
+    .about-image, .clients-image, .method, .contact{
+      grid-column: 2 / span 2;
   }
 }
 
