--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -56,7 +56,7 @@ nav a:hover{
 /*Your Code Here*/
 /*Write selector/rule property to position the skip class element*/
 .skip a:focus{
-  margin-top: 0;
+  margin-top: -40px;
 }
 /*Your Code Here*/
 /*Write selector/rule property to style all elements when in focus*/
@@ -82,7 +82,7 @@ footer{
   grid-template-columns: 1fr, 5fr, 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-row-gap: 15px;
-  overflow: hidden
+  overflow: hidden;
   /*Your Code Here*/
 }
 
@@ -158,6 +158,7 @@ header p{
   }
 
   .container{
+    display:grid;
     grid-template-columns: 50px auto 500px auto 50px;
     grid-template-rows: 400px 400px 400px 400px 400px;
     /*Your Code Here*/
