--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -79,7 +79,7 @@ footer{
 
 .container{
   display: grid;
-  grid-template-columns: 1fr, 5fr, 1fr;
+  grid-template-columns: 1fr 5fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-row-gap: 15px;
   overflow: hidden;
