--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -19,7 +19,7 @@ body{
 a{
   margin:0;
   font-size:100%;
-  color: purple;
+  color: #FB87FF;
 }
 
 header{
@@ -98,7 +98,7 @@ p {
 }
 
 .nav_links .current{
-  color: purple;
+  color:  #FB87FF;
   height: auto ;
   margin: auto;
   width: auto;
