--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -3,6 +3,37 @@ body{
   font-size: 16pt;
   background: black;
   color:white;
+  margin: 0;
+  height: 100vh;
+}
+
+#spotify{
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  width: auto;
+  margin:auto;
+}
+
+.social-icon {
+  max-width:  100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.social-icon img {
+  width: 40px;
+  height:auto;
+  padding: 10px;
+
+}
+
+.social-icon:hover {
+  opacity: 0.7;
 }
 
 .skip{
@@ -51,7 +82,6 @@ header{
   margin: auto;
   text-align: center;
   padding: 20px;
-  width:60%;
 }
 
 h1{
@@ -72,6 +102,8 @@ p {
   text-align: center;
   color:  white;
 }
+
+/*links*/
 
 .nav_links{
   display: flex;
@@ -159,19 +191,36 @@ p {
   text-align: center;
   margin: auto;
   width: 60%;
-  position: relative;
   background:	#4B0082;
   border-radius: 25px;
   padding-bottom:10px;
+  display: block;
 }
 
 .containeremail, .containername, .containermessage{
   margin: auto;
   width: auto;
   color: white;
-  padding: 20px;
+  text-align: center;
 }
 
+.containeremails,.containermessages, .submitbutton{
+  padding-top: 35px;
+}
+
+input {
+  width: 30%;
+  height: 25px;
+}
+
+textarea {
+  width: 50%;
+  height: 40px;
+}
+
+.submitbutton:hover{
+  opacity: 70%;
+}
 /*end of contact*/
 
 /*flip*/
@@ -246,21 +295,14 @@ p {
   text-align: center;
   padding: 20px;
   padding-top: 50px;
-  width:80%;
+  width:90%;
   margin: auto;
 }
 
-#biosp{
+.biosp{
   text-align: center;
   padding: 5px;
-  width:70%;
-  margin:auto;
-}
-
-#biospp{
-  text-align: center;
-  padding: 5px;
-  width:70%;
+  width:90%;
   margin:auto;
 }
 
@@ -277,7 +319,6 @@ p {
   grid-template-rows: auto auto auto;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
-  padding:50px;
   padding-top:90px;
   width: 80%;
   margin:auto;
