--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -277,7 +277,7 @@ textarea {
   grid-template-rows: auto auto auto;
   grid-column-gap: 30px;
   grid-row-gap: 80px;
-  width: auto;
+  width: 90%;
   margin:auto;
 }
 
@@ -294,7 +294,14 @@ textarea {
   font-size: 1.5em;
   text-align: center;
   padding: 20px;
-  padding-top: 50px;
+  padding-top: 55px;
+  width:90%;
+  margin: auto;
+}
+
+#bioss{
+  font-size: 1.5em;
+  text-align: center;
   width:90%;
   margin: auto;
 }
