--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -263,7 +263,7 @@ textarea {
 .gallerytwo{
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
   grid-column-gap: 30px;
   grid-row-gap: 80px;
   width: 90%;
